--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </p>
         
         <section class="experiencia">
-           < h2 class="tituloderecho"><u>Experiencia</u></h2>
+           < h2 class="tituloderecho">Experiencia</h2>
                <div class="años">
                    <div class="tlizquierdocontenedor">
                     <h5 class="tituloizquierdo">Microsoft</h5>
